[changes] small changes, adding close offcanvas

--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
         });
 
         $(`.${CLASS_NAME}`).css("cursor", "move");
+        $(".btn-close").click();
       }
 
       function insertCard(prefix, name, path) {
